// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should deauth on 401 1`] = `
Array [
  Array [
    "Updating traefik on:",
    "http://localhost:8080",
  ],
  Array [
    "Error: authorization expired!",
    "Please, relogin and try again.",
  ],
]
`;

exports[`Should display update error 1`] = `
Array [
  Array [
    "Updating traefik on:",
    "http://localhost:8080",
  ],
  Array [
    "Error updating traefik:",
    "Test error",
  ],
  Array [
    "Update log:
",
  ],
  Array [
    "log",
  ],
]
`;

exports[`Should display versions 1`] = `
Array [
  Array [],
  Array [
    "Exoframe Server:",
  ],
  Array [
    "  current: 0.18.0",
  ],
  Array [
    "  latest: 0.19.1",
  ],
  Array [],
  Array [
    "Traefik:",
  ],
  Array [
    "  current: v1.3.0",
  ],
  Array [
    "  latest: v1.3.2",
  ],
  Array [],
]
`;

exports[`Should update all on user prompt 1`] = `
Array [
  Array [],
  Array [
    "Exoframe Server:",
  ],
  Array [
    "  current: 0.18.0",
  ],
  Array [
    "  latest: 0.19.1",
  ],
  Array [],
  Array [
    "Traefik:",
  ],
  Array [
    "  current: v1.3.0",
  ],
  Array [
    "  latest: v1.3.2",
  ],
  Array [],
  Array [
    "Updating traefik on:",
    "http://localhost:8080",
  ],
  Array [
    "Successfully updated traefik!",
  ],
  Array [
    "Updating server on:",
    "http://localhost:8080",
  ],
  Array [
    "Successfully updated server!",
  ],
]
`;

exports[`Should update server 1`] = `
Array [
  Array [
    "Updating server on:",
    "http://localhost:8080",
  ],
  Array [
    "Successfully updated server!",
  ],
]
`;

exports[`Should update traefik 1`] = `
Array [
  Array [
    "Updating traefik on:",
    "http://localhost:8080",
  ],
  Array [
    "Successfully updated traefik!",
  ],
]
`;
